fix: test for java 8